--- a/style.css
+++ b/style.css
@@ -5,7 +5,7 @@
 
 }
 body {
-    background-image: url("image/photo.jpg");
+    background-image: url("photo.jpg");
     background-size: cover;
 }
 .container {
