--- a/style.css
+++ b/style.css
@@ -5,8 +5,7 @@
 
 }
 body {
-    background-image: url("photo.jpg");
-    background-size: cover;
+    background-color: #e0e0e0;
 }
 .container {
     position: relative;
@@ -14,7 +13,7 @@ body {
     height: 100vh;
     margin: 0 auto;
     font-family: 'Rajdhani', sans-serif;
-    background-color: rgba(255, 255, 255, 0.6);
+    /*background-color: rgba(255, 255, 255, 0.6);*/
 
 }
 
@@ -40,8 +39,8 @@ button{
     width: 120px;
     height: 30px;
     font-size: 0.8em;
-    background-color: #00FF00 ;
-    border-color: orangered;
+    background-color: #5bc0de;
+    border-color: #46b8da;
     padding: 5px 5px;
     line-height: 1.42857143;
     cursor: pointer;
@@ -73,7 +72,8 @@ span {
     width: 150px;
     height: 50px;
     font-size: 0.8em;
-    background-color: #00ff33;
+    background-color: #5bc0de;
+    border-color: #46b8da;
     padding: 5px 5px;
     line-height: 1.42857143;
     cursor: pointer;
