--- a/style.css
+++ b/style.css
@@ -4,24 +4,35 @@
     padding: 0;
 
 }
+
 body {
     background-color: #e0e0e0;
 }
+
 .container {
     position: relative;
-    max-width: 1550px;
-    height: 100vh;
+    max-width: 1300px;
+    height: 120vh;
     margin: 0 auto;
     font-family: 'Rajdhani', sans-serif;
-    /*background-color: rgba(255, 255, 255, 0.6);*/
+    padding-top: 8%;
+    background-color: rgba(255, 255, 255, 0.6);
 
 }
 
 .description {
-    margin-left: 20px;
-    margin-bottom: 10px;
+    position: absolute;
+    left: 50%;
+    transform: translateX(-50%);
     width: 300px;
     height: 50px;
+    z-index: 2;
+}
+
+.description:focus {
+    outline: none !important;
+    border-color: #46b8da;
+    box-shadow: 0 0 5px #719ECE;
 }
 
 .videoWindow {
@@ -31,11 +42,14 @@ body {
 }
 
 .find {
-    margin-left: 20px;
-    margin-bottom: 10px;
+    position: absolute;
+    top: 9%;
+    left: 50%;
+    transform: translateX(-50%);
+    z-index: 2;
 }
 
-button{
+button {
     width: 120px;
     height: 30px;
     font-size: 0.8em;
@@ -47,17 +61,25 @@ button{
     border-radius: 4px;
     border: 1px solid transparent;
     align-content: center;
-    margin-right: 10px;
     display: block;
 
 }
 
+button:focus {
+    outline: none !important;
+    border-color: #46b8da;
+    box-shadow: 0 0 5px #719ECE;
+}
+
+ul {
+    list-style: none;
+}
+
 .videoWindow {
     display: inline-block;
-    width: 650px;
     position: absolute;
     left: 50%;
-    margin-left: -20%;
+    transform: translateX(-50%);
 }
 
 h3 {
@@ -69,17 +91,30 @@ span {
 }
 
 .videoWindow > input {
-    width: 150px;
-    height: 50px;
-    font-size: 0.8em;
-    background-color: #5bc0de;
-    border-color: #46b8da;
-    padding: 5px 5px;
-    line-height: 1.42857143;
+    color: #0099CC;
+    background: transparent;
+    border: 2px solid #0099CC;
+    border-radius: 50px;
+    padding: 10px 20px;
+    text-align: center;
+    display: inline-block;
+    font-size: 16px;
+    margin: 4px 2px;
+    -webkit-transition-duration: 0.4s;
+    transition-duration: 0.4s;
     cursor: pointer;
-    border-radius: 4px;
-    border: 1px solid transparent;
-    align-content: center;
-    margin-right: 10px;
-    margin-bottom: 10px;
+    text-decoration: none;
+}
+
+.videoWindow > input:hover {
+    background-color: #008CBA;
+    color: white;
+}
+
+.videoWindow > input:focus {
+    outline: none !important;
+    border-color: #46b8da;
+    box-shadow: 0 0 5px #719ECE;
+    background-color: #46b8da;
+    color: white;
 }
