--- a/style.css
+++ b/style.css
@@ -2,52 +2,61 @@
     box-sizing: border-box;
     margin: 0;
     padding: 0;
-
 }
 
 body {
-    background-color: #e0e0e0;
+    background: #f8fdf3;
+    color: #4c4c4c;
+    font-family: 'Rajdhani', sans-serif;
+}
+
+.main, .container {
+    width: 100%;
+    max-width: 1200px;
+    border-radius: 0.35em;
+    overflow: hidden;
+    box-shadow: 0 0 26px rgba(0,0,0, .13);
+}
+
+.main {
+    height: 50vh;
+    background: url('image/film.jpg') no-repeat;
+    background-blend-mode: multiply;
+    background-size: cover;
+    margin: 2.5em auto 0 auto;
 }
 
 .container {
     position: relative;
-    max-width: 1300px;
-    height: 120vh;
+    height: 110vh;
     margin: 0 auto;
-    font-family: 'Rajdhani', sans-serif;
-    padding-top: 8%;
+    padding-top: 5%;
     background-color: rgba(255, 255, 255, 0.6);
-
 }
 
 .description {
-    position: absolute;
-    left: 50%;
-    transform: translateX(-50%);
     width: 300px;
     height: 50px;
     z-index: 2;
-}
-
-.description:focus {
-    outline: none !important;
-    border-color: #46b8da;
-    box-shadow: 0 0 5px #719ECE;
+    top: 52%;
 }
 
 .videoWindow {
     margin-top: 20px;
     margin-left: 20px;
-
 }
 
 .find {
+    z-index: 2;
+    top: 60%
+}
+
+.find, .videoWindow, .description {
     position: absolute;
-    top: 9%;
     left: 50%;
     transform: translateX(-50%);
-    z-index: 2;
 }
+
 
 button {
     width: 120px;
@@ -62,10 +71,9 @@ button {
     border: 1px solid transparent;
     align-content: center;
     display: block;
-
 }
 
-button:focus {
+.description:focus, button:focus, .videoWindow > input:focus {
     outline: none !important;
     border-color: #46b8da;
     box-shadow: 0 0 5px #719ECE;
@@ -77,9 +85,6 @@ ul {
 
 .videoWindow {
     display: inline-block;
-    position: absolute;
-    left: 50%;
-    transform: translateX(-50%);
 }
 
 h3 {
@@ -104,6 +109,7 @@ span {
     transition-duration: 0.4s;
     cursor: pointer;
     text-decoration: none;
+    font-weight: bolder;
 }
 
 .videoWindow > input:hover {
@@ -112,9 +118,40 @@ span {
 }
 
 .videoWindow > input:focus {
-    outline: none !important;
-    border-color: #46b8da;
-    box-shadow: 0 0 5px #719ECE;
     background-color: #46b8da;
     color: white;
 }
+
+@media (min-width: 0) and (max-width: 640px) {
+    .main {
+        height: 150px;
+        padding: 2.5em 1em 1em;
+        background-position: 0 1px;
+        background-size: cover;
+        margin: 0;
+    }
+    .description {
+        top:17%
+    }
+    .find {
+        top: 25%
+    }
+    .container {
+        height: 140vh;
+        padding-top: 18%;
+    }
+    h3 {
+        font-size: 15px;
+    }
+    span {
+        font-size: 14px;
+    }
+    video {
+        width: 360px;
+        height: 200px;
+        margin-left: -5%;
+    }
+}
+
+
+
