--- a/style.css
+++ b/style.css
@@ -12,9 +12,11 @@ body {
 
 .main, .container {
     width: 100%;
-    max-width: 1200px;
+    max-width: 1300px;
     border-radius: 0.35em;
     overflow: hidden;
+    -webkit-box-shadow: 0 0 26px rgba(0,0,0, .13);
+    -moz-box-shadow: 0 0 26px rgba(0,0,0, .13);
     box-shadow: 0 0 26px rgba(0,0,0, .13);
 }
 
@@ -28,7 +30,7 @@ body {
 
 .container {
     position: relative;
-    height: 110vh;
+    height: 180vh;
     margin: 0 auto;
     padding-top: 5%;
     background-color: rgba(255, 255, 255, 0.6);
@@ -81,6 +83,17 @@ button {
 
 ul {
     list-style: none;
+    padding: 0;
+    margin: 2em 0 1em;
+}
+
+ul li {
+    margin: 0 1.25% 1em;
+    padding: 1em;
+    border-radius: 0.2em;
+    border: solid 1px rgba(88, 183, 205, .2);
+    border-bottom: solid 2px rgba(88, 183, 205, .2);
+    position: relative;
 }
 
 .videoWindow {
@@ -124,21 +137,24 @@ span {
 
 @media (min-width: 0) and (max-width: 640px) {
     .main {
-        height: 150px;
+        height: 200px;
         padding: 2.5em 1em 1em;
         background-position: 0 1px;
         background-size: cover;
         margin: 0;
     }
     .description {
-        top:17%
+        top:20%
     }
     .find {
-        top: 25%
+        top: 27%
     }
     .container {
         height: 140vh;
-        padding-top: 18%;
+        padding-top: 10%;
+    }
+    ul {
+        margin: 1em 0 1em;
     }
     h3 {
         font-size: 15px;
