--- a/style.css
+++ b/style.css
@@ -22,7 +22,7 @@ body {
 
 .main {
     height: 50vh;
-    background: url('image/film.jpg') no-repeat;
+    background: url('film.jpg') no-repeat;
     background-blend-mode: multiply;
     background-size: cover;
     margin: 2.5em auto 0 auto;
